grammar.js
    source_file: ($) =>
      repeat(
        choice(
          // https://www.w3.org/TR/css-color-4/#color-syntax
          $.css_color,

          // https://developer.android.com/reference/android/graphics/Color#encoding
          // https://api.flutter.dev/flutter/dart-ui/Color-class.html
          $.u32_argb,

          $.tailwindcss_color,

          $._css_hex_color_invalid,
          $._non_symbol,
          $._symbol,
        ),
      ),

    // In preparation for CSS Color Level 5, where CSS color becomes recursive.
    css_color: ($) =>
      choice(
        $.css_hex_color,
        $.css_named_color,
        $.css_keyword_transparent,
        $.css_function_rgb,
        $.css_function_rgba,
        $.css_function_hsl,
        $.css_function_hsla,
        $.css_function_hwb,
        $.css_function_lab,
        $.css_function_oklab,
        $.css_function_lch,
        $.css_function_oklch,
        $.css_function_color,
      ),

    // https://www.w3.org/TR/css-syntax-3/#number-token-diagram
    _css_number: (_) => css_number,
    css_number: ($) => $._css_number,

    // https://www.w3.org/TR/css-syntax-3/#percentage-token-diagram
    _css_percentage: (_) => css_percentage,
    css_percentage: ($) => $._css_percentage,

    // https://www.w3.org/TR/css-color-4/#alpha-syntax
    _css_angle: (_) => css_angle,
    css_hue: ($) => choice($._css_number, $._css_angle),

    // According to CSS grammar, there is no spaces between the function name and the opening parenthesis.
    // This can be done with token.immediate() alone.
    // We additionally wrap the sequence with token() because
    // we want to reduce parse errors when the text looks like `color: `
    // Without token(), `color: ` will be tokenized as `color` and `:`.
    // tree-sitter considers `:` as parse error because `color` is not
    // immediately followed by `(`.
    // With token(), the color function rule will be considered only when
    // `color(` is tokenized.
    // This can reduce parse error, and hence make parsing faster.
    // The caveat is that the field "function_name" now includes
    // the opening parenthesis at the end.
    // I cannot figure out how to work around that.
    // But this is a very minor issue comparing to the degraded parsing
    // performance in a CSS file containing a lot of occurrences of `color: `
    css_function_name_oklch: (_) =>
      token(seq(css_keyword("oklch"), token.immediate("("))),
    css_function_name_color: (_) =>
      token(seq(css_keyword("color"), token.immediate("("))),

    // https://www.w3.org/TR/css-color-4/#rgb-functions
    css_function_oklch: ($) => lch($, $.css_function_name_oklch),

    // https://www.w3.org/TR/css-color-4/#color-function
    css_hex_color: ($) =>
      choice(
        $._css_hex_color_8_digits,
        $._css_hex_color_6_digits,
        $._css_hex_color_4_digits,
        $._css_hex_color_3_digits,
      ),
    _css_hex_color_8_digits: (_) => /#[0-9a-fA-F]{8}/,
    _css_hex_color_6_digits: (_) => /#[0-9a-fA-F]{6}/,
    _css_hex_color_4_digits: (_) => /#[0-9a-fA-F]{4}/,
    _css_hex_color_3_digits: (_) => /#[0-9a-fA-F]{3}/,
    _css_hex_color_invalid: (_) => /#[0-9a-zA-Z]+/,

    // https://www.w3.org/TR/css-color-4/#named-colors
    tailwindcss_color: ($) =>
      choice(
        // https://tailwindcss.com/docs/colors#using-color-utilities
        $.tailwindcss_color_classname_without_alpha,

        // https://tailwindcss.com/docs/colors#adjusting-opacity
        $.tailwindcss_color_classname_with_alpha_percentage,

        // https://tailwindcss.com/docs/colors#adjusting-opacity
        $.tailwindcss_color_classname_with_alpha_arbitrary_value,

        // https://tailwindcss.com/docs/colors#referencing-in-css
        $.tailwindcss_color_css_variable_without_alpha,

        // https://tailwindcss.com/docs/colors#referencing-in-css
        $.tailwindcss_color_css_variable_with_alpha,
      ),

    tailwindcss_color_css_variable_without_alpha: (_) =>
      token(seq("--color-", tailwindcss_color_name)),

    tailwindcss_color_css_variable_with_alpha: ($) =>
      seq(
        "--alpha(",
        "var(",
        field("css_variable", $.tailwindcss_color_css_variable_without_alpha),
        ")",
        "/",
        field("alpha", choice($.css_number, $.css_percentage)),
        ")",
      ),

    tailwindcss_color_classname_without_alpha: (_) =>
      token(seq(tailwindcss_color_utility, "-", tailwindcss_color_name)),

    tailwindcss_color_classname_with_alpha_percentage: (_) =>
      token(
        seq(
          tailwindcss_color_utility,
          "-",
          tailwindcss_color_name,
          "/",
          css_number,
        ),
      ),

    tailwindcss_color_classname_with_alpha_arbitrary_value: (_) =>
      token(
        seq(
          tailwindcss_color_utility,
          "-",
          tailwindcss_color_name,
          "/",
          "[",
          choice(css_number, css_percentage),
          "]",
        ),
      ),

    _symbol: (_) => symbol,
    _non_symbol: (_) => non_symbol,
